<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL" Id="{ced9f844-e280-4f9b-9ea0-a88c969cbec8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	MAX_SIZE : UINT := 4;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>